# foxworth

./: .gitignore  .hlint.yaml  .mdformat.toml  LICENSE  README.md  example.fw  example_all_tokens.fw  flake.nix  fourmolu.yaml  foxworth.cabal
app/: Desugar.hs  Lex.hs  Log.hs  Main.hs  Options.hs  Parse.hs  Rename.hs  Syntax.hs  Utils.hs
