cabal-version:      3.0

name:               foxworth
version:            0.0.1
synopsis:           A System Fω evaluator

license:            MIT
author:             Olive Welch
copyright:          (c) 2024 Olive Welch
homepage:           https://github.com/OliveIsAWord/foxworth

license-file:       LICENSE
extra-doc-files:    README.md
tested-with:        GHC == 9.6.5

executable foxworth
    hs-source-dirs:   app
    main-is:          Main.hs

    other-modules:
        , Log
        , Options
        , Utils
        , Lex
        , Syntax
        , Parse
        , Desugar
    -- Libraries are locked with 'cabal freeze' to the version provided by nix.
    build-depends:
        , ansi-terminal
        , array
        , base
        , co-log-core
        , containers
        , deriving-compat
        , filepath
        , free
        , megaparsec
        , mtl
        , optparse-applicative
        , ordered-containers
        , text >= 2.1.1
        , time
        , transformers
        , unliftio-core
    build-tool-depends:
        -- , alex:alex >= 3.5.1 && < 3.6
        -- , happy:happy >= 1.20.1.1 && < 1.21
    default-extensions:
        -- From the GHC2024 extensions
        LambdaCase
        MonoLocalBinds
        DerivingStrategies

        -- Deriving Show1
        TemplateHaskell

        -- Improving record usage
        DisambiguateRecordFields
        DuplicateRecordFields
        OverloadedRecordDot
        RecordWildCards
        NoFieldSelectors

        -- Improve Text usage
        OverloadedStrings

        -- Because it looks nice
        UnicodeSyntax

        -- Good extension, but currently just affects error messages
        NoStarIsType
    ghc-options:
        -Wall
        -Wcompat
        -Wno-name-shadowing
    default-language: GHC2021
